Fixed an issue with testing methods having the same name, thus talking on the message bus under the same topic.